--- a/web-wallet/package.json
+++ b/web-wallet/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "@solana/web3.js": "^1.98.0",
+    "axios": "^1.7.9",
     "bip39": "^3.1.0",
+    "buffer": "^6.0.3",
     "ed25519-hd-key": "^1.3.0",
     "ethers": "^6.13.4",
     "react": "^18.3.1",
