--- a/swap-contract/package.json
+++ b/swap-contract/package.json
@@ -2,13 +2,13 @@
   "dependencies": {
     "@project-serum/anchor": "^0.26.0",
     "@solana/web3.js": "^1.98.0",
-    "axios": "^1.7.9"
+    "axios": "^1.7.9",
+    "dotenv": "^16.4.7"
   },
   "name": "swap-contract",
   "version": "1.0.0",
   "description": "This is a project for a swap contract",
   "main": "index.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
